--- a/login.html
+++ b/login.html
@@ -136,6 +136,7 @@
                 <a href="#"><i class="ri-instagram-fill"></i></a>
                 <a href="#"><i class="ri-twitter-fill"></i></a>
             </div>
+            <p>Email: cakenbakeph@gmail.com</p>
         </div>
     </section>
 
