--- a/allproducts.html
+++ b/allproducts.html
@@ -263,6 +263,7 @@
                 <a href="#"><i class="ri-instagram-fill"></i></a>
                 <a href="#"><i class="ri-twitter-fill"></i></a>
             </div>
+            <p>Email: cakenbakeph@gmail.com</p>
         </div>
     </section>
 
