--- a/faqcnb.html
+++ b/faqcnb.html
@@ -116,6 +116,7 @@
                 <a href="#"><i class="ri-instagram-fill"></i></a>
                 <a href="#"><i class="ri-twitter-fill"></i></a>
             </div>
+            <p>Email: cakenbakeph@gmail.com</p>
         </div>
     </section>
 
